--- a/style-wear/package.json
+++ b/style-wear/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Devcon324.github.io/SEG_3125_Project_2",
+  "homepage": "https://devcon324.github.io/SEG_3125_Project_2/",
   "name": "style-wear",
   "version": "0.1.0",
   "private": true,
