--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
+    "react-faq-component": "^1.3.4",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
+    "react-tooltip": "^5.27.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
